crates/reinhardt-core/crates/macros/tests/ui/action/fail/invalid_detail_type.rs
use reinhardt_macros::action;

struct ViewSet;

impl ViewSet {
    #[action(methods = "POST", detail = "not_bool")]
    async fn invalid_detail(&self) -> Result<(), ()> {
        Ok(())
    }
}

fn main() {}
